# SpaceRush

./: .gitignore  CMakeLists.txt  FindASSIMP.cmake  FindSOIL.cmake  LICENSE  README.md
libs/assimp/lib/: assimp.exp  zlibstatic.lib
libs/bullet/lib/Release/: Bullet2FileLoader.lib  Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletDynamics.lib  BulletFileLoader.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletSoftBody.lib  BulletWorldImporter.lib  BulletXmlWorldImporter.lib  ConvexDecomposition.lib  GIMPACTUtils.lib  HACD.lib  LinearMath.lib  OpenGLWindow.lib  gtest.lib  gwen.lib
libs/soil/lib/: SOIL.lib
res/: basic.fsh  basic.vsh  debug.fsh  debug.vsh  diffuse.fsh  projectile.fsh  projectile.vsh  stars.fsh  stars.vsh  text.fsh  text.vsh
res/Asteroid/: asteroid.fbx
res/Projectile/: projectile.fbx
res/SpaceShip/: spaceship.fbx
src/: Common.hpp  INode.hpp  Scene.cpp  Scene.hpp  main.cpp
src/common/: Input.cpp  Input.hpp  Logger.hpp  Timer.cpp  Timer.hpp
src/game/: Asteroid.cpp  Asteroid.hpp  AsteroidEmmiter.cpp  AsteroidEmmiter.hpp  GameManager.cpp  GameManager.hpp  PhysicsNode.cpp  PhysicsNode.hpp  PhysicsSimulator.cpp  PhysicsSimulator.hpp  Projectile.cpp  Projectile.hpp  SpaceShip.cpp  SpaceShip.hpp
src/rendering/: Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  DebugRenderer.cpp  DebugRenderer.hpp  FPSCounter.cpp  FPSCounter.hpp  Lights.hpp  MeshData.cpp  MeshData.hpp  MeshEntry.cpp  MeshFactory.cpp  MeshFactory.hpp  Quad.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  TextRenderer.cpp  TextRenderer.hpp  Viewport.cpp  Viewport.hpp
